--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Hello, World!</h1>
+        <h2>うんち！w</h2>
         <p>giithubとvscodeを連携させます。</p>
     </body>
 </html>
